Initial bug fixes
Fixing errors in heading size and colors. Next is content updates

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ $(document).ready(function () {
 <br>
 <div class="row">
 <div class="col-md-4">
-<p><img src="images/profile_photo_circle.png" width="311" style="display: block; margin: auto;" /></p>
+<p><img src="images/profile_photo_circle.png" style="display: block; margin: auto;" /></p>
 </div>
 <div class="col-md-8">
 <p>I am currently a doctoral candidate at the <a
@@ -353,9 +353,10 @@ contacted via email
 <center>
 <div class="float">
 <img src="images/VT_migration_animation.gif"
-alt=" Woodcock tagged in Vermont disperse throughout the southeast during their fall migration" />
-<div class="figcaption"><br>Woodcock tagged in Vermont disperse
-throughout the southeast during their fall migration</div>
+alt="Woodcock tagged in Vermont disperse throughout the southeast during their fall migration" />
+<div class="figcaption"><font size = "2" color = "grey"><em>Woodcock
+tagged in Vermont disperse throughout the southeast during their fall
+migration</em></font></div>
 </div>
 </center>
 
