--- a/research.html
+++ b/research.html
@@ -411,8 +411,9 @@ div.tocify {
 <div class="float">
 <img src="images/woodcock_circle2.png"
 alt=" An American Woodcock forages in a swamp during an early spring snowfall" />
-<div class="figcaption"><br>An American Woodcock forages in a swamp
-during an early spring snowfall</div>
+<div class="figcaption"><br><font size = "2" color = "grey"><em>An
+American Woodcock forages in a swamp during an early spring
+snowfall</em></font></div>
 </div>
 </center>
 </div>
@@ -496,8 +497,9 @@ Forty News</a></p>
 <div class="float">
 <img src="images/lpc_circle.png"
 alt=" Lesser prairie-chicken tagged with a VHF transmitter in preparation for translocation" />
-<div class="figcaption"><br>Lesser prairie-chicken tagged with a VHF
-transmitter in preparation for translocation</div>
+<div class="figcaption"><br><font size = "2" color = "grey"><em>Lesser
+prairie-chicken tagged with a VHF transmitter in preparation for
+translocation</em></font></div>
 </div>
 </center>
 </div>
@@ -513,8 +515,9 @@ transmitter in preparation for translocation</div>
 <div class="float">
 <img src="images/HOSP_JenLobo.png"
 alt=" Artwork by Jen Lobo, frontispiece for the Wilson Journal of Ornithology (Issue 132)" />
-<div class="figcaption"><br>Artwork by Jen Lobo, frontispiece for the
-Wilson Journal of Ornithology (Issue 132)</div>
+<div class="figcaption"><br><font size = "2" color = "grey"><em>Artwork
+by Jen Lobo, frontispiece for the Wilson Journal of Ornithology (Issue
+132)</em></font></div>
 </div>
 </center>
 </div>
