--- a/applications.html
+++ b/applications.html
@@ -416,8 +416,9 @@ h3 {
 <div class="float">
 <img src="images/woodcock_transmitter_circle.png"
 alt=" An American Woodcock receiving a satellite tag (Photo credit: Billy Pope, ALDNR)" />
-<div class="figcaption"><br>An American Woodcock receiving a satellite
-tag<br>(Photo credit: Billy Pope, ALDNR)</div>
+<div class="figcaption"><br><font size = "2" color = "grey"><em>An
+American Woodcock receiving a satellite tag<br>(Photo credit: Billy
+Pope, ALDNR)</em></font></div>
 </div>
 </center>
 </div>
@@ -448,16 +449,12 @@ Data Exploration App</a> allows users to view full migrations from
 <em>View the app <a
 href="https://www.woodcockmigration.org/migration.html">here</a></em>
 </center>
-<br>
-<div class="figure" style="text-align: center">
-<img src="images/app_anim15.gif" alt="<br> The Migration Exploration App
-shows satellite-tagged woodcock migrating north in the spring”
-width=“60%” height=“60%” /&gt;
-<p class="caption">
-<br> The Migration Exploration App shows satellite-tagged woodcock
-migrating north in the spring
-</p>
-</div>
+<p><br>
+<img src="images/app_anim15.gif" width="60%" height="60%" style="display: block; margin: auto;" /></p>
+<center>
+<font size = "2" color = "grey"><em>The Migration Exploration App shows
+satellite-tagged woodcock migrating north in the spring</em></font>
+</center>
 <hr />
 </div>
 </div>
@@ -470,9 +467,10 @@ migrating north in the spring
 <div class="float">
 <img src="images/nesting_woodcock_circle.png"
 alt=" Satellite-tagged woodcock using nesting habitat (Photo credit: Mathieu Tetreault, Environment and Climate Change Canada)" />
-<div class="figcaption"><br>Satellite-tagged woodcock using nesting
-habitat (Photo credit: Mathieu Tetreault, Environment and Climate Change
-Canada)</div>
+<div
+class="figcaption"><br><font size = "2" color = "grey"><em>Satellite-tagged
+woodcock using nesting habitat (Photo credit: Mathieu Tetreault,
+Environment and Climate Change Canada)</em></font></div>
 </div>
 </center>
 </div>
