Content updates (research)
Updated the papers and most recent description of the research projects.

--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@ applications as an interactive platform to allow stakeholders to access
 data and results. I’ve included a gallery of those applications <a
 href="applications.html">here</a>.</p>
 <p>My CV is available <a
-href="files/Liam_Berigan_CV_12_4_2022.pdf">here</a>, and I can be
+href="files/Liam_Berigan_CV_12_14_2023.pdf">here</a>, and I can be
 contacted via email
-<a href="mailto: liam.berigan@maine.edu" target="_blank">here</a></p>
+<a href="mailto: liam.berigan@maine.edu" target="_blank">here</a>.</p>
 </div>
 </div>
 <hr />
