--- a/index.html
+++ b/index.html
@@ -299,10 +299,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="https://twitter.com/LA_Berigan" target="_blank">
-    <span class="fa fa-twitter"></span>
-     
-  </a>
+  <a href="files/Liam_Berigan_CV_12_14_2023.pdf" target="_blank">CV</a>
 </li>
 <li>
   <a href="mailto: liam.berigan@maine.edu" target="_blank">
