Added Slezak et al. 2024

--- a/research.html
+++ b/research.html
@@ -435,6 +435,12 @@ impact the habitat use of migratory birds throughout the year, and as an
 example of a low-altitude flier when examining how airspace obstacles
 overlap with migratory flight altitudes.</p>
 <p><em>Publications:</em></p>
+<p>Slezak , C. R., E. J. Blomberg, A. M. Roth, <strong>L. A.
+Berigan</strong>, A. C. Fish, R. L. Darling, … and S. R. McWilliams
+(2024). Unconventional life history in a migratory shorebird:
+desegregating reproduction and migration. Proceedings of the Royal
+Society B 291: 20240021. <a
+href="files/Slezak_itinerant_2024.pdf">PDF</a></p>
 <p>Clements, S. J., <strong>L. A. Berigan</strong>, A. C. Fish, R. L.
 Darling, A. M. Roth, G. Balkcom, … and E. J. Blomberg (2024). Satellite
 tracking of American Woodcock reveals a gradient of migration
