New job and email

--- a/index.html
+++ b/index.html
@@ -328,12 +328,13 @@ $(document).ready(function () {
 <p><img src="images/profile_photo_circle.png" style="display: block; margin: auto;" /></p>
 </div>
 <div class="col-md-8">
-<p>I am currently a doctoral candidate at the <a
-href="https://www.umaine.edu">University of Maine</a> in the Department
-of Wildlife, Fisheries, and Conservation Biology. My work focuses on the
-movements, habitat use, and population dynamics of wildlife, especially
-bird species. I have particular interests in migration and conservation
-of at-risk species through techniques such as translocation.</p>
+<p>I am currently a postdoctoral researcher at <a
+href="https://www.k-state.edu">Kansas State University</a> in the <a
+href="https://www.k-state.edu/kscfwru/">Kansas Cooperative Fish and
+Wildlife Research Unit</a>. My work focuses on the movements, habitat
+use, and population dynamics of wildlife, especially bird species. I
+have particular interests in migration and conservation of at-risk
+species through techniques such as translocation.</p>
 <p>I am also passionate about effective communication of results and
 scientific recommendations to wildlife agencies and the public. Some of
 my recent work has used <a href="https://www.shinyapps.io/">Shiny</a>
@@ -343,7 +344,7 @@ href="applications.html">here</a>.</p>
 <p>My CV is available <a
 href="files/Liam_Berigan_CV_4_25_2024.pdf">here</a>, and I can be
 contacted via email
-<a href="mailto: liam.berigan@maine.edu" target="_blank">here</a>.</p>
+<a href="mailto: liamaberigan@gmail.com" target="_blank">here</a>.</p>
 </div>
 </div>
 <hr />
@@ -367,7 +368,7 @@ migration</em></font></div>
 <hr />
 <p style="text-align: center;">Compiled in R with RMarkdown and Github Pages.<br />
 Copyright &copy; <span id="year"></span> Liam Berigan</p>
-<p style="text-align: center;"><a href="mailto: liam.berigan@maine.edu"> liam.berigan at maine.edu</a></span></p>
+<p style="text-align: center;"><a href="mailto: liamaberigan@gmail.com"> Email</a></span></p>
 
 <br>
 
