--- a/research.html
+++ b/research.html
@@ -597,7 +597,7 @@ Forks Herald</a></p>
 <hr />
 <p style="text-align: center;">Compiled in R with RMarkdown and Github Pages.<br />
 Copyright &copy; <span id="year"></span> Liam Berigan</p>
-<p style="text-align: center;"><a href="mailto: liam.berigan@maine.edu"> liam.berigan at maine.edu</a></span></p>
+<p style="text-align: center;"><a href="mailto: liamaberigan@gmail.com"> Email</a></span></p>
 
 <br>
 
