--- a/audio_recordings.html
+++ b/audio_recordings.html
@@ -351,7 +351,7 @@ although I’ve included some highlights below.</p>
 <hr />
 <p style="text-align: center;">Compiled in R with RMarkdown and Github Pages.<br />
 Copyright &copy; <span id="year"></span> Liam Berigan</p>
-<p style="text-align: center;"><a href="mailto: liam.berigan@maine.edu"> liam.berigan at maine.edu</a></span></p>
+<p style="text-align: center;"><a href="mailto: liamaberigan@gmail.com"> Email</a></span></p>
 
 <br>
 
