Adding PhD dissertation

--- a/research.html
+++ b/research.html
@@ -441,6 +441,10 @@ Berigan</strong>, A. C. Fish, R. L. Darling, … and S. R. McWilliams
 desegregating reproduction and migration. Proceedings of the Royal
 Society B 291: 20240021. <a
 href="files/Slezak_itinerant_2024.pdf">PDF</a></p>
+<p><strong>Berigan, L. A.</strong> (2024). Full annual cycle analysis of
+American Woodcock (<em>Scolopax minor</em>) distribution, habitat use,
+and migration ecology. PhD dissertation, University of Maine. <a
+href="files/Berigan_PhD_dissertation.pdf">PDF</a></p>
 <p>Clements, S. J., <strong>L. A. Berigan</strong>, A. C. Fish, R. L.
 Darling, A. M. Roth, G. Balkcom, … and E. J. Blomberg (2024). Satellite
 tracking of American Woodcock reveals a gradient of migration
