Bug fixes for Google indexing
Bug fixes according to issues within Google Search Console. Changed some urls for stability and broken links, added a sitemap.

--- a/applications.html
+++ b/applications.html
@@ -375,10 +375,10 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="files/Liam_Berigan_CV_12_14_2023.pdf" target="_blank">CV</a>
+  <a href="files/Liam_Berigan_CV.pdf" target="_blank">CV</a>
 </li>
 <li>
-  <a href="mailto: liam.berigan@maine.edu" target="_blank">
+  <a href="mailto: liamaberigan@gmail.com" target="_blank">
     <span class="fa fa-envelope"></span>
      
   </a>
@@ -473,11 +473,11 @@ Environment and Climate Change Canada)</em></font></div>
 </div>
 <div class="col-md-8">
 <p>During a collaborative project with the <a
-href="www.google.com">Pennsylvania Game Commission</a>, we built an
-application to allow PGC employees to interactively weight migratory and
-breeding season habitat suitability when making woodcock habitat
-conservation decisions. The resulting tool, called the Woodcock Priority
-Area Siting Tool (<a
+href="https://www.pgc.pa.gov/Pages/default.aspx">Pennsylvania Game
+Commission</a>, we built an application to allow PGC employees to
+interactively weight migratory and breeding season habitat suitability
+when making woodcock habitat conservation decisions. The resulting tool,
+called the Woodcock Priority Area Siting Tool (<a
 href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a>), has since been
 used to inform state-level management and support woodcock habitat
 funding proposals in Pennsylvania.</p>
