--- a/audio_recordings.html
+++ b/audio_recordings.html
@@ -299,10 +299,10 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="files/Liam_Berigan_CV_12_14_2023.pdf" target="_blank">CV</a>
+  <a href="files/Liam_Berigan_CV.pdf" target="_blank">CV</a>
 </li>
 <li>
-  <a href="mailto: liam.berigan@maine.edu" target="_blank">
+  <a href="mailto: liamaberigan@gmail.com" target="_blank">
     <span class="fa fa-envelope"></span>
      
   </a>
