--- a/research.html
+++ b/research.html
@@ -375,10 +375,10 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="files/Liam_Berigan_CV_12_14_2023.pdf" target="_blank">CV</a>
+  <a href="files/Liam_Berigan_CV.pdf" target="_blank">CV</a>
 </li>
 <li>
-  <a href="mailto: liam.berigan@maine.edu" target="_blank">
+  <a href="mailto: liamaberigan@gmail.com" target="_blank">
     <span class="fa fa-envelope"></span>
      
   </a>
@@ -417,23 +417,24 @@ snowfall</em></font></div>
 <div class="col-md-8">
 <p>Recent focus on migratory bird declines have led to increased
 interest in how birds move and use habitat throughout their full annual
-cycle. The <a href="www.woodcockmigration.org">EWMRC</a> has been
-examining migratory bird movement ecology and habitat selection using
-migratory data from &gt;500 GPS-tagged American Woodcock. One of our
-early management-oriented products is the Woodcock Priority Area Siting
-Tool (<a href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a>; see our
-summary on the <a href="applications.html">applications page</a>). <br>
-<br> During this project we’ve developed a process for classifying GPS
-data collected during bird migration, which uses a modified step-length
-threshold with a hidden Markov model to estimate the migratory state of
-a woodcock at any point of its full annual cycle. As this technique can
-be used to estimate the migratory state of a bird during a mortality
-event, we’ll be able to integrate these classifications into an upcoming
-paper which examines woodcock survival in respect to migration. We’ve
-also used woodcock as a model for understanding how functional responses
-impact the habitat use of migratory birds throughout the year, and as an
-example of a low-altitude flier when examining how airspace obstacles
-overlap with migratory flight altitudes.</p>
+cycle. The <a href="https://www.woodcockmigration.org">EWMRC</a> has
+been examining migratory bird movement ecology and habitat selection
+using migratory data from &gt;500 GPS-tagged American Woodcock. One of
+our early management-oriented products is the Woodcock Priority Area
+Siting Tool (<a href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a>;
+see our summary on the <a href="applications.html">applications
+page</a>). <br> <br> During this project we’ve developed a process for
+classifying GPS data collected during bird migration, which uses a
+modified step-length threshold with a hidden Markov model to estimate
+the migratory state of a woodcock at any point of its full annual cycle.
+As this technique can be used to estimate the migratory state of a bird
+during a mortality event, we’ll be able to integrate these
+classifications into an upcoming paper which examines woodcock survival
+in respect to migration. We’ve also used woodcock as a model for
+understanding how functional responses impact the habitat use of
+migratory birds throughout the year, and as an example of a low-altitude
+flier when examining how airspace obstacles overlap with migratory
+flight altitudes.</p>
 <p><em>Publications:</em></p>
 <p>Slezak , C. R., E. J. Blomberg, A. M. Roth, <strong>L. A.
 Berigan</strong>, A. C. Fish, R. L. Darling, … and S. R. McWilliams
