--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="files/Liam_Berigan_CV_12_14_2023.pdf" target="_blank">CV</a>
+  <a href="files/Liam_Berigan_CV.pdf" target="_blank">CV</a>
 </li>
 <li>
-  <a href="mailto: liam.berigan@maine.edu" target="_blank">
+  <a href="mailto: liamaberigan@gmail.com" target="_blank">
     <span class="fa fa-envelope"></span>
      
   </a>
@@ -341,9 +341,8 @@ my recent work has used <a href="https://www.shinyapps.io/">Shiny</a>
 applications as an interactive platform to allow stakeholders to access
 data and results. I’ve included a gallery of those applications <a
 href="applications.html">here</a>.</p>
-<p>My CV is available <a
-href="files/Liam_Berigan_CV_4_25_2024.pdf">here</a>, and I can be
-contacted via email
+<p>My CV is available <a href="files/Liam_Berigan_CV.pdf">here</a>, and
+I can be contacted via email
 <a href="mailto: liamaberigan@gmail.com" target="_blank">here</a>.</p>
 </div>
 </div>
