First shot at teaching section
Things are starting to come together, but will need some reformatting to drive my point home

--- a/_navbar.html
+++ b/_navbar.html
@@ -26,6 +26,13 @@
   </a>
 </li>
 <li>
+  <a href="teaching.html">
+    <span class="fa fa-book"></span>
+     
+    Teaching
+  </a>
+</li>
+<li>
   <a href="applications.html">
     <span class="fa fa-code"></span>
      
