--- a/research.html
+++ b/research.html
@@ -338,6 +338,13 @@ div.tocify {
   </a>
 </li>
 <li>
+  <a href="teaching.html">
+    <span class="fa fa-book"></span>
+     
+    Teaching
+  </a>
+</li>
+<li>
   <a href="applications.html">
     <span class="fa fa-code"></span>
      
