--- a/index.html
+++ b/index.html
@@ -262,6 +262,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="teaching.html">
+    <span class="fa fa-book"></span>
+     
+    Teaching
+  </a>
+</li>
+<li>
   <a href="applications.html">
     <span class="fa fa-code"></span>
      
