--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ $(document).ready(function () {
 <br>
 <div class="row">
 <div class="col-md-4">
-<p><img src="images/profile_photo_circle.png" style="display: block; margin: auto;" /></p>
+<p><img src="images/profile_photo_circle.png" width="311" style="display: block; margin: auto;" /></p>
 </div>
 <div class="col-md-8">
 <p>I am currently a postdoctoral researcher at <a
