Even more mobile friendly
Addresses #1. Adjusted image columns to hide when viewed in a small browser, should make this much more readable in window or mobile.

--- a/applications.html
+++ b/applications.html
@@ -362,7 +362,7 @@ h3 {
 <h2>Exploring woodcock migration</h2>
 <br>
 <div class="row">
-<div class="col-md-4 col-sm-4 col-xs-4">
+<div class="col-md-4 hidden-xs hidden-sm">
 <center>
 <div class="float">
 <img src="images/woodcock_transmitter_circle.png"
@@ -373,7 +373,7 @@ Pope, ALDNR)</em></font></div>
 </div>
 </center>
 </div>
-<div class="col-md-8 col-sm-8 col-xs-8">
+<div class="col-md-8 col-sm-12">
 <p>During my work with the Eastern Woodcock Migration Research
 Cooperative (<a href="https://www.woodcockmigration.org/">EWMRC</a>) I
 built several tools to improve our ability to communicate results to the
@@ -413,7 +413,7 @@ satellite-tagged woodcock migrating north in the spring</em></font>
 <h2>Interactive habitat prioritization</h2>
 <br>
 <div class="row">
-<div class="col-md-4 col-sm-4 col-xs-4">
+<div class="col-md-4 hidden-xs hidden-sm">
 <center>
 <div class="float">
 <img src="images/nesting_woodcock_circle.png"
@@ -425,7 +425,7 @@ Environment and Climate Change Canada)</em></font></div>
 </div>
 </center>
 </div>
-<div class="col-md-8 col-sm-8 col-xs-8">
+<div class="col-md-8 col-sm-12">
 <p>During a collaborative project with the <a
 href="https://www.pgc.pa.gov/Pages/default.aspx">Pennsylvania Game
 Commission</a>, we built an application to allow PGC employees to
