--- a/header.html
+++ b/header.html
@@ -1,2 +1,2 @@
 <link rel="icon" href="feather.svg">
-<link rel=”mask-icon” href=”mask-icon.svg” color=”#000000">
+<link rel=”mask-icon” href=”feather.svg” color=”#000000">
