--- a/header.html
+++ b/header.html
@@ -1,2 +1,1 @@
-<link rel="icon" href="feather.svg">
-<link rel=”mask-icon” href=”feather.svg” color=”#000000">
+<link rel="icon" type="image/png" href="feather.png">
