--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Liam A. Berigan</title>
+<title>index.knit</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -259,15 +259,7 @@ $(document).ready(function () {
           <li><a href="research.html"><span class="fa fa-feather"></span> Research</a></li>
           <li><a href="teaching.html"><span class="fa fa-book"></span> Teaching</a></li>
           <li><a href="applications.html"><span class="fa fa-code"></span> Applications</a></li>
-          <!--<li><a href="https://www.woodcockmigration.org/" target="_blank"><span class="fa fa-kiwi-bird"></span> EWMRC</a></li>-->
-        </ul>
-<ul class="nav navbar-nav navbar-right">
-          <!--<li><a href="https://ebird.org/profile/NDUyNDky" target="_blank">eBird</a></li>-->
-          <li><a href="https://github.com/LiamABerigan" target="_blank"><span class="fa fa-github"></span></a></li>
-          <!--<li><a href="https://www.researchgate.net/profile/Liam-Berigan" target="_blank"><span class="ai ai-researchgate"></span></a></li>-->
-          <li><a href="https://scholar.google.com/citations?user=ql-OqKQAAAAJ&amp;hl=en" target="_blank"><span class="fa fa-graduation-cap"></span></a></li>
-          <li><a href="files/Liam_Berigan_CV.pdf" target="_blank">CV</a></li>
-          <li><a href="mailto:liamaberigan@gmail.com" target="_blank"><span class="fa fa-envelope"></span></a></li>
+          <li><a href="files/Liam_Berigan_CV.pdf"><span class="fa fa-pen-nib"></span> CV</a></li>
         </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
@@ -278,7 +270,6 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Liam A. Berigan</h1>
 
 </div>
 
