Fixing title bug

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.knit</title>
+<title>Liam A. Berigan</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -270,10 +270,12 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Liam A. Berigan</h1>
 
 </div>
 
 
+<style> h1.title {display: none;}</style>
 <br>
 <div class="row">
 <div class="col-md-4 col-sm-4 col-xs-4">
