Revamped homepage; courses taught
Homepage is looking way better. Reworded my dissertation description, and added courses taught to the teaching section. Teaching section should be done. Closes #3.

--- a/index.html
+++ b/index.html
@@ -301,15 +301,45 @@ I can be contacted via email
 </div>
 </div>
 <hr />
+<div class="col-md-6">
+<div class="row">
 <center>
 <div class="float">
-<img src="images/VT_migration_animation.gif"
-alt="Woodcock tagged in Vermont disperse throughout the southeast during their fall migration" />
-<div class="figcaption"><font size = "2" color = "grey"><em>Woodcock
-tagged in Vermont disperse throughout the southeast during their fall
-migration</em></font></div>
+<img src="images/VT_collaborators.jpg" style="width:85.0%"
+alt="Deploying satellite transmitters in collaboration with Vermont Fish and Wildlife, Audubon Vermont, and The Nature Conservancy" />
+<div class="figcaption"><font size = "2" color = "grey"><em>Deploying
+satellite transmitters in collaboration with Vermont Fish and Wildlife,
+Audubon Vermont, and The Nature Conservancy</em></font></div>
 </div>
 </center>
+</div>
+</div>
+<div class="col-md-6">
+<div class="row-md-6">
+<center>
+<div class="float">
+<img src="images/chipped_nail_polish.jpg" style="width:72.5%"
+alt="Woodcock about to be tagged with a satellite transmitter in Nova Scotia" />
+<div class="figcaption"><font size = "2" color = "grey"><em>Woodcock
+about to be tagged with a satellite transmitter in Nova
+Scotia</em></font></div>
+</div>
+</center>
+</div>
+<div class="row-md-6">
+<br>
+<center>
+<div class="float">
+<img src="images/migration_spring_2020.gif"
+alt="Woodcock tagged throughout the US and Canada migrate north in Spring 2020" />
+<div class="figcaption"><font size = "2" color = "grey"><em>Woodcock
+tagged throughout the US and Canada migrate north in Spring
+2020</em></font></div>
+</div>
+</center>
+</div>
+</div>
+<p><br></p>
 
 <br />
 <br />
