--- a/research.html
+++ b/research.html
@@ -407,24 +407,28 @@ snowfall</em></font></div>
 <div class="col-md-8 col-sm-12">
 <p>Recent focus on migratory bird declines have led to increased
 interest in how birds move and use habitat throughout their full annual
-cycle. The <a href="https://www.woodcockmigration.org">EWMRC</a> has
-been examining migratory bird movement ecology and habitat selection
-using migratory data from &gt;500 GPS-tagged American Woodcock. One of
-our early management-oriented products is the Woodcock Priority Area
-Siting Tool (<a href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a>;
-see our summary on the <a href="applications.html">applications
-page</a>). <br> <br> During this project we’ve developed a process for
-classifying GPS data collected during bird migration, which uses a
-modified step-length threshold with a hidden Markov model to estimate
-the migratory state of a woodcock at any point of its full annual cycle.
-As this technique can be used to estimate the migratory state of a bird
-during a mortality event, we’ll be able to integrate these
-classifications into an upcoming paper which examines woodcock survival
-in respect to migration. We’ve also used woodcock as a model for
-understanding how functional responses impact the habitat use of
-migratory birds throughout the year, and as an example of a low-altitude
-flier when examining how airspace obstacles overlap with migratory
-flight altitudes.</p>
+cycle. The <a href="https://www.woodcockmigration.org">Eastern Woodcock
+Migration Research Cooperative (EWMRC)</a> has been examining migratory
+bird movement ecology and habitat selection using migratory data from
+&gt;700 GPS-tagged American Woodcock, tagged with the assistance of 44+
+federal, state, and non-profit collaborators during all seasons and
+throughout eastern North America.</p>
+<p>My doctoral dissertation used this dataset to meet 4 objectives :</p>
+<ol style="list-style-type: decimal">
+<li><p>Development of a management prioritization tool for the
+Pennsylvania Game Commission, titled <a
+href="https://woodcock.shinyapps.io/W-PAST">W-PAST</a> (see our summary
+on the <a href="applications.html">applications page</a>).</p></li>
+<li><p>Creation of a classification system which uses modified hidden
+Markov models to estimate migratory states from sparse GPS
+data.</p></li>
+<li><p>Assessment of how functional responses impact the habitat use of
+migratory birds throughout the full annual cycle.</p></li>
+<li><p>Examination of woodcock migratory altitudes and woodcocks’
+comparative exposure to airspace obstacles during migratory
+flights.</p></li>
+</ol>
+<p><br></p>
 <p><em>Publications:</em></p>
 <p>Slezak , C. R., E. J. Blomberg, A. M. Roth, <strong>L. A.
 Berigan</strong>, A. C. Fish, R. L. Darling, … and S. R. McWilliams
