--- a/teaching.html
+++ b/teaching.html
@@ -359,9 +359,23 @@ ecological perspective, including topics such as regression,
 mark-recapture, and population dynamics. However, some of my past
 teaching experiences have also included introductory biology and
 field-based taxonomic courses. While my approach might vary between
-different types of courses, the following overview is an example of how
-I might apply some common strategies to a scenario I’m familiar with:
+different types of courses, the overview below is an example of how I
+might apply some common strategies to a scenario I’m familiar with:
 teaching population dynamics to undergraduates.</p>
+<div
+style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
+<p><strong>Instructor of Record</strong>:</p>
+<ul>
+<li>Wildlife Population Dynamics (University of Maine)</li>
+</ul>
+<p><strong>Teaching Assistant</strong>:</p>
+<ul>
+<li><p>Principles of Biology (Kansas State University)</p></li>
+<li><p>Introductory Biology: Ecology and the Environment (Cornell
+University)</p></li>
+<li><p>Field Ornithology (Cornell University)</p></li>
+</ul>
+</div>
 <p><br></p>
 <hr />
 </div>
