--- a/audio_recordings.html
+++ b/audio_recordings.html
@@ -302,11 +302,17 @@ although I’ve included some highlights below.</p>
 &nbsp;
 
 <hr />
-<p style="text-align: center;">Compiled in R with RMarkdown and Github Pages.<br />
-Copyright &copy; <span id="year"></span> Liam Berigan</p>
-<p style="text-align: center;"><a href="mailto: liamaberigan@gmail.com"> Email</a></span></p>
 
-<br>
+<div style="text-align: center; padding: 20px; background-color: #333; color: white;">
+        <p>&copy; <span id="year"></span> Liam Berigan. All Rights Reserved.</p>
+        <p>Contact: <a href="mailto:liamaberigan@gmail.com" style="color: #fff;">liamaberigan@gmail.com</a></p>
+        <p>Phone: <a href="tel:+7038888284" style="color: #fff;"> (703) 888-8284</a></p>
+        <p>
+            <a href="https://www.researchgate.net/profile/Liam-Berigan" target="_blank" style="color: #fff; margin: 0 10px;">ResearchGate</a> |
+            <a href="https://github.com/LiamABerigan" target="_blank" style="color: #fff; margin: 0 10px;">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=ql-OqKQAAAAJ&amp;hl=en" target="_blank" style="color: #fff; margin: 0 10px;">Google Scholar</a>
+        </p>
+    </div>
 
 <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
