--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ I can be contacted via email
 </div>
 <hr />
 <div class="col-md-6">
-<div class="row">
+<div class="row hidden-xs hidden-sm">
 <center>
 <div class="float">
 <img src="images/VT_collaborators.jpg" style="width:85.0%"
@@ -312,10 +312,11 @@ satellite transmitters in collaboration with Vermont Fish and Wildlife,
 Audubon Vermont, and The Nature Conservancy</em></font></div>
 </div>
 </center>
+<p><br></p>
 </div>
 </div>
 <div class="col-md-6">
-<div class="row-md-6">
+<div class="row-md-6 hidden-xs hidden-sm">
 <center>
 <div class="float">
 <img src="images/chipped_nail_polish.jpg" style="width:72.5%"
@@ -349,11 +350,17 @@ tagged throughout the US and Canada migrate north in Spring
 &nbsp;
 
 <hr />
-<p style="text-align: center;">Compiled in R with RMarkdown and Github Pages.<br />
-Copyright &copy; <span id="year"></span> Liam Berigan</p>
-<p style="text-align: center;"><a href="mailto: liamaberigan@gmail.com"> Email</a></span></p>
 
-<br>
+<div style="text-align: center; padding: 20px; background-color: #333; color: white;">
+        <p>&copy; <span id="year"></span> Liam Berigan. All Rights Reserved.</p>
+        <p>Contact: <a href="mailto:liamaberigan@gmail.com" style="color: #fff;">liamaberigan@gmail.com</a></p>
+        <p>Phone: <a href="tel:+7038888284" style="color: #fff;"> (703) 888-8284</a></p>
+        <p>
+            <a href="https://www.researchgate.net/profile/Liam-Berigan" target="_blank" style="color: #fff; margin: 0 10px;">ResearchGate</a> |
+            <a href="https://github.com/LiamABerigan" target="_blank" style="color: #fff; margin: 0 10px;">GitHub</a> |
+            <a href="https://scholar.google.com/citations?user=ql-OqKQAAAAJ&amp;hl=en" target="_blank" style="color: #fff; margin: 0 10px;">Google Scholar</a>
+        </p>
+    </div>
 
 <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
