Adding workshops to teaching page

--- a/teaching.html
+++ b/teaching.html
@@ -375,6 +375,13 @@ style="background-color: #F6F6F6; border-radius: 10px; padding: 20px;">
 University)</p></li>
 <li><p>Field Ornithology (Cornell University)</p></li>
 </ul>
+<p><strong>Workshops</strong>:</p>
+<ul>
+<li><p>Advanced programming in R (University of Maine; 3-lecture
+series)</p></li>
+<li><p>Introduction to scientific data analysis (Cobscook
+Institute)</p></li>
+</ul>
 </div>
 <p><br></p>
 <hr />
