New paper (woodcock flight altitudes)
Added to research page and CV

--- a/research.html
+++ b/research.html
@@ -430,11 +430,16 @@ flights.</p></li>
 </ol>
 <p><br></p>
 <p><em>Publications:</em></p>
-<p>Slezak , C. R., E. J. Blomberg, A. M. Roth, <strong>L. A.
+<p><strong>Berigan, L. A.</strong>, S. J. Clements, R. L. Darling, A. C.
+Fish, A. M. Roth, G. Balkcom, … and E. J. Blomberg (2025). Low migratory
+flight altitudes may explain increased collision risk for <em>Scolopax
+minor</em> (American Woodcock). Ornithological Applications 127:duaf017.
+<a href="files/Berigan_flight_altitudes_2025.pdf">PDF</a></p>
+<p>Slezak, C. R., E. J. Blomberg, A. M. Roth, <strong>L. A.
 Berigan</strong>, A. C. Fish, R. L. Darling, … and S. R. McWilliams
 (2024). Unconventional life history in a migratory shorebird:
 desegregating reproduction and migration. Proceedings of the Royal
-Society B 291: 20240021. <a
+Society B 291:20240021. <a
 href="files/Slezak_itinerant_2024.pdf">PDF</a></p>
 <p><strong>Berigan, L. A.</strong> (2024). Full annual cycle analysis of
 American Woodcock (<em>Scolopax minor</em>) distribution, habitat use,
