--- a/index.html
+++ b/index.html
@@ -289,12 +289,13 @@ Wildlife Research Unit</a>. My work focuses on the movements, habitat
 use, and population dynamics of wildlife, especially bird species. I
 have particular interests in migration and conservation of at-risk
 species through techniques such as translocation.</p>
-<p>I am also passionate about effective communication of results and
-scientific recommendations to wildlife agencies and the public. Some of
-my recent work has used <a href="https://www.shinyapps.io/">Shiny</a>
-applications as an interactive platform to allow stakeholders to access
-data and results. I’ve included a gallery of those applications <a
-href="applications.html">here</a>.</p>
+<p>Starting this August, I’ll be joining <a
+href="https://www.auburn.edu">Auburn University</a> as an Assistant
+Professor of Quantitative Ecology. Much of my research will focus on the
+wintering ecology of birds, especially those reliant on grasslands or
+fire-dependent ecosystems. I’ll also provide statistical consulting
+within the College of Forestry, Wildlife, and Environment, and teach
+WILD 5750 starting in Spring 2026.</p>
 <p>My CV is available <a href="files/Liam_Berigan_CV.pdf">here</a>, and
 I can be contacted via email
 <a href="mailto: liamaberigan@gmail.com" target="_blank">here</a>.</p>
