--- a/teaching.html
+++ b/teaching.html
@@ -334,7 +334,8 @@ div.tocify {
           <li><a href="index.html"><span class="fa fa-home"></span> Home</a></li>
           <li><a href="research.html"><span class="fa fa-feather"></span> Research</a></li>
           <li><a href="teaching.html"><span class="fa fa-book"></span> Teaching</a></li>
-          <li><a href="applications.html"><span class="fa fa-code"></span> Applications</a></li>
+          <li><a href="lab_group.html"><span class="fa fa-flask"></span> Lab Group</a></li>
+          <!--<li><a href="applications.html"><span class="fa fa-code"></span> Applications</a></li>-->
           <li><a href="files/Liam_Berigan_CV.pdf"><span class="fa fa-pen-nib"></span> CV</a></li>
         </ul>
     </div><!--/.nav-collapse -->
